Ingress create and added cluster name to describe application output
